# vscodelearn

./: EmploySystem.cpp  Makefile
arm-linux-gcc/hello/: hello  hello.c
arm-linux-gcc/hello2/: arm_platform_exe  main.c
arm-linux-gcc/helloarm/: hello  hello.c  hello_exe
arm-linux-gcc/helloarm/include/: test.h
arm-linux-gcc/newproject/: CMakeLists.txt
c_cpp/g++/hello/: hello.cpp  (+1 more)
c_make/cmakelearn/: main.cpp
c_make/cmakelearn0/: CMakeLists.txt  main.cpp  readme.txt
c_make/cppproject/: CMakeLists.txt  main  main.cpp
c_make/hellocpp/: CMakeLists.txt  main.cpp
c_make/hellocpparmcompile/: CMakeLists.txt  main.c
c_make/soliger_gun/: CMakeLists.txt  main.cpp  soilger-gun
c_make/soliger_gun/include/: Gun.h  Soilger.h
c_make/soliger_gun/src/: Gun.cpp  Soilger.cpp
cmakelearn/: CMakeLists.txt
cmakelearn/include/: add.h
cmakelearn/src/: add.cpp
cmakelearn0/: CMakeLists.txt
cmakelearn1/: CMakeLists.txt  main.cpp
cmakelearn1/include/: display.h
cmakelearn1/src/: display.cpp
hellocpp/: helloworld  main.cpp
leds_0x31000000/: Makefile  leds_elf
test/: EmploySystem.cpp  README.md
test/leds_0x31000000/: leds.c  leds.dis
test_compile_to_multifile/: main.c
test_compile_to_multifile/hellogcc/: hello.c  hello_exe
test_compile_to_multifile/include/: output.h
test_compile_to_multifile/inoutg++/: sharemain  staticmain
test_compile_to_multifile/shalib/: main.c  sharemain
test_compile_to_multifile/src/: output.c
test_compile_to_multifile/stalib/: main.c  staticmain
test_gdb/: .main.cpp.swp  has_g_par_main  main.cpp  no_g_par_main  test
(+9 files in other folders)
